# cmake_test

./: .gitignore  CMakeLists.txt  README.md  sample_text.txt
cmake/: macros.cmake
cmake/compiler/: msvc.cmake
cmake/platform/: windows.cmake
code/: CMakeLists.txt  main.cpp
code/client/: CMakeLists.txt  main.cpp  pch.h
code/common/: CMakeLists.txt  LineParser.h  common.cpp  common.h
code/module/: CMakeLists.txt  dllmain.cpp  math.cpp  math.h  module.h  pch.h
